[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/grobbo_alien_hatchling/scene.gltf" type="PackedScene" id=1]
[ext_resource path="res://scripts/small_enemy.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=2]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereShape" id=3]
radius = 1.5

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.85098, 1, 0, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 5.0
height = 10.0

[node name="SmallEnemy" type="KinematicBody" groups=["SmallEnemy"]]
script = ExtResource( 2 )

[node name="small_enemy_mesh_scene" parent="." instance=ExtResource( 1 )]
transform = Transform( 7.64274e-17, 1.74846e-09, 0.04, 0.04, -1.74846e-09, 0, 1.74846e-09, 0.04, -1.74846e-09, 0, 0, 0 )
__meta__ = {
"_editor_description_": "		"
}

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="DetectionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
transform = Transform( 60, 0, 0, 0, 60, 0, 0, 0, 60, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollisionArea"]
shape = SubResource( 3 )

[node name="MinimapIndicator" type="MeshInstance" parent="."]
layers = 2
mesh = SubResource( 5 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
